# backlib

./: .gitignore  CHANGELOG.md  CREDITS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yaml
backlib/: __init__.py
backlib/internal/: markers.py  typing.py
backlib/internal/backports/py310/: json.py  operator.py
backlib/internal/backports/py310/builtins/: __init__.py
backlib/internal/backports/py310/builtins/internal/: builtins.py
backlib/internal/backports/py310/errno/: __init__.py
backlib/internal/backports/py310/errno/internal/: darwin1.py  errno.py  freebsd13.py  posix88.py
backlib/internal/backports/py310/os/: __init__.py
backlib/internal/backports/py310/os/internal/: linux5.py  os.py
backlib/internal/backports/py310/os_path/: __init__.py
backlib/internal/backports/py310/os_path/internal/: os_path.py  posixpath.py
backlib/internal/backports/py310/stat/: __init__.py
backlib/internal/backports/py310/stat/internal/: stat.py
backlib/internal/backports/py311/: os.py
backlib/internal/backports/py311/errno/: __init__.py
backlib/internal/backports/py311/errno/internal/: darwin1.py  errno.py  freebsd13.py
backlib/internal/backports/py311/operator/: __init__.py
backlib/internal/backports/py311/operator/internal/: operator.py
backlib/internal/backports/py311/tomllib/: __init__.py
backlib/internal/backports/py311/tomllib/internal/: tomllib.py
backlib/internal/backports/py312/: json.py
backlib/internal/backports/py312/os/: __init__.py
backlib/internal/backports/py312/os/internal/: linux5.py  os.py
backlib/internal/backports/py312/os_path/: __init__.py
backlib/internal/backports/py312/os_path/internal/: genericpath.py  ntpath.py  os_path.py  posixpath.py
backlib/internal/backports/py313/: json.py  tomllib.py
backlib/internal/backports/py313/errno/: __init__.py
backlib/internal/backports/py313/errno/src/: codes.py
backlib/internal/backports/py313/io/: __init__.py
backlib/internal/backports/py313/io/src/: classes.py  encoding.py  errors.py  openers.py
backlib/internal/backports/py313/json/: __init__.py
backlib/internal/backports/py313/json/src/: decoder.py  encoder.py  impl.py
backlib/internal/backports/py313/ntpath/: __init__.py
backlib/internal/backports/py313/os/: __init__.py
backlib/internal/backports/py313/os_path/: __init__.py
backlib/internal/backports/py313/ospath/: __init__.py
backlib/internal/backports/py313/posixpath/: __init__.py
backlib/internal/backports/py313/stat/: __init__.py
backlib/internal/backports/py313/tomllib/: __init__.py
backlib/internal/linters/: decorators.py
backlib/internal/markers/: aware.py  depends_on.py  techdebt.py  todo.py
backlib/internal/stdlib/: builtins.py  collections.py
backlib/internal/stdlib/py313/errno/: __init__.py
backlib/internal/stdlib/py313/io/: __init__.py
backlib/internal/stdlib/py313/json/: __init__.py
backlib/internal/stdlib/py313/ntpath/: __init__.py
backlib/internal/stdlib/py313/os/: __init__.py
backlib/internal/stdlib/py313/ospath/: __init__.py
backlib/internal/stdlib/py313/posixpath/: __init__.py
backlib/internal/stdlib/py313/stat/: __init__.py
backlib/internal/stdlib/py313/tomllib/: __init__.py
backlib/internal/utils/: alias.py  lint.py  platform.py  platforms.py  selectors.py  sys.py  typing.py
backlib/py310/: builtins.py  errno.py  json.py  operator.py  os.py  stat.py
backlib/py310/os/: __init__.py  path.py
backlib/py311/: __init__.py  builtins.py  errno.py  json.py  operator.py  os.py  stat.py  tomllib.py
backlib/py311/os/: __init__.py  path.py
backlib/py312/: __init__.py  builtins.py  errno.py  json.py  operator.py  os.py  stat.py  tomllib.py
backlib/py312/os/: __init__.py  path.py
backlib/py313/: __init__.py  builtins.py  errno.py  io.py  json.py  ntpath.py  operator.py  os.py  ospath.py  pathlib.py  posixpath.py  shutil.py  stat.py  tarfile.py  tempfile.py  tomllib.py  zipfile.py
backlib/py313/internal/backports/: builtins.py  json.py  operator.py  stat.py
backlib/py313/internal/backports/builtins/: __init__.py
backlib/py313/internal/backports/collections_abc/: __init__.py
backlib/py313/internal/backports/errno/: __init__.py
backlib/py313/internal/backports/io/: __init__.py
backlib/py313/internal/backports/json/: __init__.py
backlib/py313/internal/backports/ntpath/: __init__.py
backlib/py313/internal/backports/operator/: __init__.py
backlib/py313/internal/backports/os/: __init__.py
backlib/py313/internal/backports/os_path/: __init__.py
backlib/py313/internal/backports/posixpath/: __init__.py
backlib/py313/internal/backports/stat/: __init__.py
backlib/py313/internal/backports/tomllib/: __init__.py
backlib/py313/internal/json/: __init__.py  decoder.py  encoder.py  scanner.py
backlib/py313/internal/markers/: ruff.py  techdebt.py
backlib/py313/internal/stdlib/: os.py  typing.py
backlib/py313/internal/stdlib/json/: __init__.py  decoder.py  encoder.py  scanner.py
backlib/py313/internal/stdlib/tomllib/: __init__.py  parser.py  re.py
backlib/py313/internal/tomllib/: __init__.py  parser.py  re.py
backlib/py313/internal/utils/: alias.py  conversions.py  platform.py  typing.py
backlib/py313/os/: __init__.py  path.py
dev/docker/: py310.Dockerfile  py311.Dockerfile  py312.Dockerfile  py313.Dockerfile  py39.Dockerfile
dev/sandbox/: __main__.py
docs/: conf.py  errno.md  index.rst  io.md  pathlib.md  posixpath.md  stat.md  tarfile.md  tomllib.md  zipfile.md
docs/backports/: index.rst
docs/backports/python310/: builtins.rst  index.rst  io.rst  json.rst  os.path.rst  os.rst
docs/backports/python311/: index.rst  io.rst  os.path.rst  os.rst  tomllib.rst
docs/backports/python312/: index.rst  operator.rst  os.path.rst  stat.rst
docs/backports/python313/: builtins.rst  errno.rst  index.rst  io.rst  ntpath.rst  operator.rst  os.path.rst  os.rst  pathlib.rst  posixpath.rst  shutil.rst  stat.rst  tarfile.rst  zipfile.rst
docs/py313/: errno.md  json.md  ntpath.md  os.md  os.path.md  shutil.md  stat.md
(+131 files in other folders)
