[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "backlib"
version = "0.2.1"
description = "Backports for the Python standard library."
license = "MIT"
authors = ["Sergei Y. Bogdanov <syubogdanov@outlook.com>"]
maintainers = ["Sergei Y. Bogdanov <syubogdanov@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/syubogdanov/backlib"
repository = "https://github.com/syubogdanov/backlib"
documentation = "https://backlib.readthedocs.io"
keywords = [
    "python",
    "backport",
    "stdlib",
    "errno",
    "io",
    "json",
    "operator",
    "os",
    "os.path",
    "stat",
    "tomllib",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.9, <3.14"
typing-extensions = "^4.12"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "~25.1"
mypy = "~1.15"
ruff = "~0.7"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "~8.3"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
no_implicit_optional = true
python_version = "3.9"
strict_equality = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "A005",    # Module {name} shadows a Python standard-library module
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "FBT001",  # Checks for the use of boolean positional arguments in function definitions, as determined by the presence of a bool type hint.
    "FBT002",  # Checks for the use of boolean positional arguments in function definitions, as determined by the presence of a boolean default value.
    "N801",    # Checks for class names that do not follow the CamelCase convention.
    "PTH100",  # Checks for uses of os.path.abspath.
    "PTH102",  # Checks for uses of os.mkdir.
    "PTH103",  # Checks for uses of os.makedirs.
    "PTH116",  # Checks for uses of os.stat.
]
select = ["ALL"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["BlockingIOError", "abs", "open", "pow"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
allow-magic-value-types = ["bytes", "int", "str"]
max-args = 8
